@@ -13,6 +13,8 @@ Added UWM_GETMENUTHEME     message
 Added UWM_GETREBARTHEME    message 
 Added UWM_GETTOOLBARTHEME  message
 
+Added PreTranslate Message support for modeless dialogs
+
 Version 6.7
 ===========
 Bug fixes:
